# fitness-food

./: README.md  pyproject.toml  requirements.txt
backend/app/: main.py  utils.py
backend/data/: meals.json
frontend/: index.html  package-lock.json  package.json  postcss.config.js
frontend/src/: App.tsx  index.css
frontend/src/app/: layout.tsx
frontend/src/components/: Header.tsx  MealCard.tsx  WeeklyMenu.tsx
frontend/src/lib/: api.ts  meals.ts  types.ts  utils.ts
frontend/src/pages/: WeeklyMenu.tsx
