[tool.poetry]
name = "fitness-food"         # <--- Campo Requerido: Nombre del proyecto
version = "0.1.0"             # <--- Campo Requerido: Versión inicial
description = "Backend for the fitness menu application."
authors = ["Oskar Vanegas <vanegaso045@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
[tool.poetry.dependencies]
python = "^3.13"
gunicorn = "^22.0.0"  # <--- ¡Agrega esta línea!
flask = "^3.0.0"      # <--- Agrega Flask u otras dependencias que uses